# AgentLens

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  README.md  handover.md  pyproject.toml
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
agentlens_results/domsteer_datavoyager_toolcall_matrix/: batch_config.yaml  run_plan.dry_run.json
configs/batches/: domsteer_t1_gemini_gui_smoke.yaml  domsteer_t1_registered_computer_smoke.yaml  domsteer_t1_t3_claude_opus46_gui_comparison.yaml  domsteer_t1_t3_gpt54_claude_smoke.yaml  domsteer_t1_t3_gpt55_standard_grounded_gui_comparison.yaml  domsteer_t1_t3_opus48_standard_grounded_gui_comparison.yaml  gpt54_datavoyager_smoke.yaml  initial_patch_gpt55_gui_only_web_sensemaking_visual.yaml  initial_patch_gpt55_tfplayground_design_pairs.yaml  initial_patch_gpt55_web_sensemaking_visual.yaml
configs/cli/: domsteer_t1_t3_cli_initial_comparison.yaml
docker/: gui_vs_cli_agent_clis.Dockerfile
docs/: acting-evaluating-pipeline.md  agent-structures-and-tool-tiers.md  balanced-task-set.md  benchmarks.md  capture-first-computer-use-and-intervention.md  general-idea.md  handout.md  local-browser-evaluation-setup.md  multi-tool-and-sessions.md  openai-providers.md  screenshot-react-tools.md  task-candidate-matrix.md  task-registry.md  trajectory-and-visualization.md  trajectory-collection-tasks.md  trajectory-data-layout.md  trajectory-processing-v0.md  trajectory_analysis_guide.md
environments/: README.md
fixtures/: screenshot_react_tools.html  screenshot_react_tools_smoke.html
human_study/: agentlens-study.service  server.py  test_study.py
scripts/: desktop_ready_check.py  domsteer_cli_comparison.py  gui_vs_cli_full_workflow_smoke.py  gui_vs_cli_grounded_task_browser.py  import_gui_vs_cli_tasks.py  prepare_workflow_desktop_apps_poc.sh  prepare_workflow_desktop_poc.sh  run_domsteer_datavoyager_matrix_aws.sh  validate_task_registry.py
tests/: test_anthropic_tool_adapter.py  test_codex_oauth_live.py  test_desktop_actions.py  test_desktop_react_adapter.py  test_desktop_react_loop.py  test_gui_synth_backend.py  test_gui_vs_cli_authored_tasks.py  test_gui_vs_cli_chatgpt.py  test_model_retry_backoff.py  test_openai_computer_use.py  test_openai_provider.py  test_openai_tool_adapter.py  test_task_file_includes.py  test_tool_harness_tiers.py  test_trajectory_paths.py
(+203 files in other folders)
